tests/snapshots/run_wpt_conformance__trtx_notEqual_float32_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "not_equal.https.any.js",
    "notEqual float32 0D scalar",
    "trtx",
    Failed {
        msg: Some(
            "not_equal :: notEqual float32 0D scalar: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputA: [-0.6285496950149536]; inputB: [-4.4166412353515625]\n  expected output: [1]\n  actual output: [0]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f32[];\n    inputB: f32[];\n  }\n\n  nodes {\n    [output] = notEqual(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
