tests/snapshots/run_wpt_conformance__trtx_notEqual_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "not_equal.https.any.js",
    "notEqual float32 1D constant tensors",
    "trtx",
    Failed {
        msg: Some(
            "not_equal :: notEqual float32 1D constant tensors: index 2: actual=0 expected=1 tolerance=0\n  inputs: inputB: [2.80570650100708, 5.588105201721191, -4.839719772338867, 4.996258735656738, 0.9727277755737304, -6.173707485198975, 2.80570650100708, 5.588105201721191, 7.767369747161865, -4.308907985687256, -5.895479679107666, -8.53209114074707, 2.80570650100708, 5.588105201721191, 0.17833954095840454, -4.479541778564453, 0.6819732189178467, -6.6875128746032715, 2.80570650100708, 5.588105201721191, -9.041799545288086, -1.972828149795532, -3.011512279510498, 3.6268343925476074] (constant); inputA: [2.80570650100708, 5.588105201721191, 2.855226516723633, 4.996258735656738, 0.9727277755737304, -4.742599964141846, 2.80570650100708, 5.588105201721191, -5.107602119445801, 6.624142169952393, -2.3207247257232666, -7.053895950317383, 2.80570650100708, 5.588105201721191, 4.980423927307129, -5.440841197967529, 1.1459590196609497, 7.774532794952393, 2.80570650100708, 5.588105201721191, -6.245251178741455, -2.8490731716156006, -2.6951117515563965, 5.817563056945801] (constant)\n  expected output: [0, 0, 1, 0, 0, 1, 0, 0, 1, 1 ...] (len=24)\n  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)\n  expected output full nd:\n[0, 0, 1, 0, 0, 1, 0, 0, 1, 1, ...] (len=24, shape=[24])\n  actual output full nd:\n[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[24])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: f32[24] @bytes([178, 144, 51, 64, 194, 209, 178, 64, 252, 222, 154, 192, 90, 225, 159, 64, 176, 4, 121, 63, 3, 143, 197, 192, 178, 144, 51, 64, 194, 209, 178, 64, 75, 142, 248, 64, 147, 226, 137, 192, 197, 167, 188, 192, 114, 131, 8, 193, 178, 144, 51, 64, 194, 209, 178, 64, 164, 158, 54, 62, 104, 88, 143, 192, 204, 149, 46, 63, 27, 0, 214, 192, 178, 144, 51, 64, 194, 209, 178, 64, 54, 171, 16, 193, 162, 133, 252, 191, 158, 188, 64, 192, 14, 30, 104, 64]);\n    operand_1: f32[24] @bytes([178, 144, 51, 64, 194, 209, 178, 64, 8, 188, 54, 64, 90, 225, 159, 64, 176, 4, 121, 63, 97, 195, 151, 192, 178, 144, 51, 64, 194, 209, 178, 64, 122, 113, 163, 192, 249, 248, 211, 64, 193, 134, 20, 192, 132, 185, 225, 192, 178, 144, 51, 64, 194, 209, 178, 64, 162, 95, 159, 64, 95, 27, 174, 192, 201, 174, 146, 63, 249, 200, 248, 64, 178, 144, 51, 64, 194, 209, 178, 64, 25, 217, 199, 192, 55, 87, 54, 192, 182, 124, 44, 192, 122, 41, 186, 64]);\n  }\n\n  nodes {\n    [output] = notEqual(operand_1, operand_0, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
